[gd_scene load_steps=23 format=3 uid="uid://dex5ybh72uomo"]

[ext_resource type="Theme" uid="uid://d27558cdkugpr" path="res://Assets/Resources/MainTheme.tres" id="1_tmcsk"]
[ext_resource type="Script" path="res://Scripts/Components/HomeMenu/Home.gd" id="1_uex14"]
[ext_resource type="StyleBox" uid="uid://ydlntdtysjhc" path="res://Assets/Resources/StyleBoxxes/DefaultCornerless.tres" id="3_cgrau"]
[ext_resource type="PackedScene" uid="uid://gsmdmm4cie0" path="res://Scenes/Components/HomeMenu/Tabs/MusicTab.tscn" id="3_uvy2d"]
[ext_resource type="PackedScene" uid="uid://cugs6ixvklnpn" path="res://Scenes/Components/HomeMenu/Tabs/AlbumMusicTab.tscn" id="5_dx7ea"]
[ext_resource type="PackedScene" uid="uid://c8u27hukg18cw" path="res://Scenes/Components/HomeMenu/Tabs/AlbumTab.tscn" id="5_p0xqo"]
[ext_resource type="PackedScene" uid="uid://yh17p5vo1ynv" path="res://Scenes/Components/HomeMenu/Settings/Settings.tscn" id="6_xd810"]
[ext_resource type="Script" path="res://Scripts/Components/HomeMenu/EnqueueButton.gd" id="7_84wqk"]

[sub_resource type="InputEventKey" id="InputEventKey_cdorg"]
device = -1
keycode = 4194334

[sub_resource type="InputEventKey" id="InputEventKey_mjpn1"]
device = -1
keycode = 4194332

[sub_resource type="Shortcut" id="Shortcut_cvt0x"]
events = [SubResource("InputEventKey_cdorg"), SubResource("InputEventKey_mjpn1")]

[sub_resource type="InputEventAction" id="InputEventAction_4htky"]
action = &"Enqueue"
pressed = true

[sub_resource type="Shortcut" id="Shortcut_fc311"]
events = [SubResource("InputEventAction_4htky")]

[sub_resource type="InputEventKey" id="InputEventKey_bw3fi"]
device = -1
keycode = 49
unicode = 49

[sub_resource type="Shortcut" id="Shortcut_2fr8g"]
events = [SubResource("InputEventKey_bw3fi")]

[sub_resource type="InputEventKey" id="InputEventKey_hbtkb"]
device = -1
keycode = 50
unicode = 50

[sub_resource type="Shortcut" id="Shortcut_mxejl"]
events = [SubResource("InputEventKey_hbtkb")]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uyyr7"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_y64le"]
content_margin_left = 22.0
color = Color(0.125911, 0.125911, 0.125911, 1)
grow_begin = 0.0
grow_end = 0.0
thickness = 20
vertical = true

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_roh73"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3o752"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e3j07"]
bg_color = Color(0.137255, 0.137255, 0.137255, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[node name="Home" type="Control" groups=["Home"]]
z_index = 5
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_tmcsk")
script = ExtResource("1_uex14")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.247059, 0.247059, 0.247059, 1)

[node name="MainCont" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Navigation" type="PanelContainer" parent="MainCont"]
layout_mode = 2
theme_override_styles/panel = ExtResource("3_cgrau")

[node name="Options" type="VBoxContainer" parent="MainCont/Navigation"]
custom_minimum_size = Vector2(152, 0)
layout_mode = 2

[node name="Sub1" type="VBoxContainer" parent="MainCont/Navigation/Options"]
custom_minimum_size = Vector2(152, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="Close" type="Button" parent="MainCont/Navigation/Options/Sub1"]
layout_mode = 2
mouse_default_cursor_shape = 2
shortcut = SubResource("Shortcut_cvt0x")
text = "Close"
metadata/_edit_use_anchors_ = true

[node name="Enqueue" type="Button" parent="MainCont/Navigation/Options/Sub1"]
visible = false
layout_mode = 2
tooltip_text = "Enqueue Selected item"
mouse_default_cursor_shape = 2
shortcut = SubResource("Shortcut_fc311")
text = "Enqueue
"
script = ExtResource("7_84wqk")
metadata/_edit_use_anchors_ = true

[node name="HSeparator" type="HSeparator" parent="MainCont/Navigation/Options/Sub1"]
layout_mode = 2

[node name="Music" type="Button" parent="MainCont/Navigation/Options/Sub1"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
mouse_default_cursor_shape = 2
shortcut = SubResource("Shortcut_2fr8g")
text = "Music"

[node name="Albums" type="Button" parent="MainCont/Navigation/Options/Sub1"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
mouse_default_cursor_shape = 2
shortcut = SubResource("Shortcut_mxejl")
text = "Albums
"

[node name="Playlists" type="Button" parent="MainCont/Navigation/Options/Sub1"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Playlists
"

[node name="Sub2" type="VBoxContainer" parent="MainCont/Navigation/Options"]
custom_minimum_size = Vector2(152, 0)
layout_mode = 2

[node name="Settings" type="Button" parent="MainCont/Navigation/Options/Sub2"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Settings
"

[node name="HSeparator" type="HSeparator" parent="MainCont/Navigation/Options"]
layout_mode = 2
theme_override_constants/separation = 10
theme_override_styles/separator = SubResource("StyleBoxEmpty_uyyr7")

[node name="Sep" type="VSeparator" parent="MainCont"]
layout_mode = 2
theme_override_constants/separation = 20
theme_override_styles/separator = SubResource("StyleBoxLine_y64le")

[node name="TabCont" type="TabContainer" parent="MainCont"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_roh73")
current_tab = 0
tabs_visible = false

[node name="MusicTab" parent="MainCont/TabCont" instance=ExtResource("3_uvy2d")]
unique_name_in_owner = true
layout_mode = 2

[node name="AlbumTab" parent="MainCont/TabCont" instance=ExtResource("5_p0xqo")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="AlbumMusicTab" parent="MainCont/TabCont" instance=ExtResource("5_dx7ea")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Sep2" type="VSeparator" parent="MainCont"]
layout_mode = 2
theme_override_constants/separation = 20
theme_override_styles/separator = SubResource("StyleBoxEmpty_3o752")

[node name="Edit" type="Control" parent="."]
visible = false
layout_mode = 1
anchor_left = 0.348177
anchor_top = 0.203704
anchor_right = 0.651823
anchor_bottom = 0.796296
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="Edit"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_e3j07")

[node name="Label" type="Label" parent="Edit"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.465695
anchor_right = 0.534305
anchor_bottom = 0.040625
grow_horizontal = 2
text = "Edit
"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="AlbumAll" type="Control" parent="Edit"]
layout_mode = 1
anchor_top = 0.1125
anchor_right = 1.0
anchor_bottom = 0.201562
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Butt" type="Button" parent="Edit/AlbumAll"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.22807
anchor_right = 0.217839
anchor_bottom = 0.77193
grow_vertical = 2
text = "Set album for all
"
metadata/_edit_use_anchors_ = true

[node name="EditAlbum" type="TextEdit" parent="Edit/AlbumAll"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -436.0
offset_top = -21.0
offset_bottom = 21.0
grow_horizontal = 0
grow_vertical = 2
placeholder_text = "Album Name
"

[node name="Settings" parent="." instance=ExtResource("6_xd810")]
visible = false
layout_mode = 1

[connection signal="SelectionUpdated" from="." to="MainCont/Navigation/Options/Sub1/Enqueue" method="CheckSelection"]
[connection signal="pressed" from="MainCont/Navigation/Options/Sub1/Close" to="." method="HideHome"]
[connection signal="pressed" from="MainCont/Navigation/Options/Sub1/Enqueue" to="MainCont/Navigation/Options/Sub1/Enqueue" method="OnPressed"]
[connection signal="pressed" from="MainCont/Navigation/Options/Sub1/Music" to="MainCont/TabCont" method="set_current_tab" binds= [0]]
[connection signal="pressed" from="MainCont/Navigation/Options/Sub1/Albums" to="MainCont/TabCont" method="set_current_tab" binds= [1]]
[connection signal="pressed" from="MainCont/Navigation/Options/Sub2/Settings" to="Settings" method="show"]
